fix: better alignment for pricing

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -510,7 +510,7 @@ p {
     font-size: 2rem;
     line-height: 1;
     display: flex;
-    align-items: flex-end;
+    align-items: baseline;
     small {
         font-size: 1rem;
     }
