--- a/src/static/styles/ui.scss
+++ b/src/static/styles/ui.scss
@@ -112,6 +112,11 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: baseline;
+
+    .ui-labelItem__label {
+        margin-bottom: 0;
+    }
 }
 .ui-labelItem + .ui-labelItem {
     margin-top: var(--spacings-medium);
